--- a/arch/arm/configs/android_vexpress_defconfig
+++ b/arch/arm/configs/android_vexpress_defconfig
@@ -93,6 +93,7 @@ CONFIG_SERIO_AMBAKMI=y
 CONFIG_SERIAL_AMBA_PL011=y
 CONFIG_SERIAL_AMBA_PL011_CONSOLE=y
 CONFIG_POWER_SUPPLY=y
+CONFIG_SENSORS_VEXPRESS=y
 CONFIG_FB=y
 CONFIG_FB_ARMCLCD=y
 CONFIG_FB_ARMHDLCD=y
