--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -286,6 +286,10 @@ config CPU_PM
 	bool
 	depends on SUSPEND || CPU_IDLE
 
+config SWITCHER_PM
+	bool
+	depends on SUSPEND
+
 config SUSPEND_TIME
 	bool "Log time spent in suspend"
 	---help---
