--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1564,6 +1564,7 @@ config BL_SWITCHER
 	bool "big.LITTLE switcher support (experimental)"
 	depends on CPU_V7 && EXPERIMENTAL
 	select CPU_PM
+	select SWITCHER_PM
 	select ARM_CPU_SUSPEND
 	help
 	  The big.LITTLE "switcher" provides the core functionality to
