configs: vexpress64: Enable HDLCD
Signed-off-by: Jon Medhurst <tixy@linaro.org>

--- a/linaro/configs/vexpress64.conf
+++ b/linaro/configs/vexpress64.conf
@@ -74,3 +74,11 @@ CONFIG_CONNECTOR=y
 CONFIG_ATA=y
 CONFIG_SATA_SIL24=y
 CONFIG_SKY2=y
+CONFIG_DRM=y
+CONFIG_DRM_ARM=y
+CONFIG_DRM_HDLCD=y
+CONFIG_CMA=y
+CONFIG_DMA_CMA=y
+CONFIG_CMA_SIZE_SEL_MBYTES=y
+CONFIG_CMA_SIZE_MBYTES=32
+CONFIG_DRM_I2C_NXP_TDA998X=y
