configs: vexpress64: Build virtual DRM encoder
Signed-off-by: Jon Medhurst <tixy@linaro.org>

Conflicts:
	linaro/configs/vexpress64.conf

--- a/linaro/configs/vexpress64.conf
+++ b/linaro/configs/vexpress64.conf
@@ -77,6 +77,7 @@ CONFIG_SKY2=y
 CONFIG_DRM=y
 CONFIG_DRM_ARM=y
 CONFIG_DRM_HDLCD=y
+CONFIG_DRM_VIRT_ENCODER=y
 CONFIG_CMA=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_SEL_MBYTES=y
