--- a/linaro/configs/EAS.conf
+++ b/linaro/configs/EAS.conf
@@ -2,3 +2,5 @@ CONFIG_CPU_FREQ_GOV_SCHED=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED=y
 CONFIG_SCHED_TUNE=y
 CONFIG_CGROUP_SCHEDTUNE=y
+CONFIG_DEVTMPFS=y
+
