sched: Add WALT load tracking metrics
Plus lots of other code which is needed to avoid messy porting in the
marlin/sailfish kernel scheduler.

--- a/linaro/configs/EAS.conf
+++ b/linaro/configs/EAS.conf
@@ -3,4 +3,6 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED=y
 CONFIG_SCHED_TUNE=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_DEVTMPFS=y
+CONFIG_SCHED_WALT=y
+CONFIG_SCHED_WALT_FREQ_INPUT=y
 
