--- a/drivers/gpu/drm/arm/Kconfig
+++ b/drivers/gpu/drm/arm/Kconfig
@@ -1,26 +1,27 @@
 config DRM_ARM
-	bool "ARM Ltd. drivers"
-	depends on DRM && OF && (ARM || ARM64)
-	select DMA_CMA
-	select DRM_KMS_HELPER
-	select DRM_KMS_CMA_HELPER
-	select DRM_GEM_CMA_HELPER
-	select VIDEOMODE_HELPERS
+	bool
 	help
 	  Choose this option to select drivers for ARM's devices
 
 config DRM_HDLCD
 	tristate "ARM HDLCD"
-	depends on DRM_ARM
-	select I2C
+	depends on DRM && OF && (ARM || ARM64)
+	depends on COMMON_CLK
+	select DRM_ARM
+	select DRM_KMS_HELPER
+	select DRM_KMS_FB_HELPER
+	select DRM_KMS_CMA_HELPER
 	help
 	  Choose this option if you have an ARM High Definition Colour LCD
 	  controller.
 
 	  If M is selected the module will be called hdlcd.
 
-config DRM_VIRTUAL_HDLCD
-       bool "Support for virtual HDLCD"
-       depends on DRM_HDLCD
-       help
-         Enable support for virtual HDLCD as emulated by ARM's Fast Models.
+config DRM_HDLCD_SHOW_UNDERRUN
+	bool "Show underrun conditions"
+	depends on DRM_HDLCD
+	default n
+	help
+	  Enable this option to show in red colour the pixels that the
+	  HDLCD device did not fetch from framebuffer due to underrun
+	  conditions.
