--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -98,8 +98,9 @@ config ARM_TEGRA_DEVFREQ
          It reads ACTMON counters of memory controllers and adjusts the
          operating frequencies and voltages with OPP support.
 
-config ARM_FCM_DEVFREQ
+config ARM64_FCM_DEVFREQ
 	tristate "ARM FCM Partial-Way Cache DEVFREQ Driver"
+	depends on ARM64
 	select PM_OPP
 	help
 	  This adds the DEVFREQ driver which is used to control the ARM
@@ -116,6 +117,12 @@ config ARM_FCM_DEVFREQ
 	  "min_freq" should be interpreted as "min_number_of_portions", etc.
 
 	  QQQ - to fill in "depends on" clause e.g. ARM SoCs ...
+
+	  It uses architecture specific instructions which might cause
+	  instruction fault when some ARM64 platform does not support it.
+	  Make sure this driver works with your ARM64 platform.
+
+	  If unsure, say N.
 
 source "drivers/devfreq/event/Kconfig"
 
