DT: arm64: add FCM cache device
Change-Id: I16d8e5e86760c732db5dcccb51597a5e1c7fefb4
Signed-off-by: Lukasz Luba <lukasz.luba@arm.com>

--- a/arch/arm64/boot/dts/arm/juno-r2.dts
+++ b/arch/arm64/boot/dts/arm/juno-r2.dts
@@ -172,6 +172,15 @@
                 /include/ "juno_r2-sched-energy.dtsi"
 	};
 
+	fcm_l3_cache: fcm-l3-cache {
+		compatible = "arm,fcm-l3-cache";
+		portions = <4>;
+		size = <1024>; /* size in KB */
+		line-size = <64>;
+		polling = <10>; /* miliseconds */
+		connected-cpus = <0 1 3>; /*cpus that are pinned to that L3 cache */
+	};
+
 	pmu_a72 {
 		compatible = "arm,cortex-a72-pmu";
 		interrupts = <GIC_SPI 02 IRQ_TYPE_LEVEL_HIGH>,
