DT: fcm: add new description of the l3 cache and some policy
Change-Id: I8493d2ed62709449fd7fab8bee3c7b610d01dde1
Signed-off-by: Lukasz Luba <lukasz.luba@arm.com>

--- a/arch/arm64/boot/dts/arm/juno-r2.dts
+++ b/arch/arm64/boot/dts/arm/juno-r2.dts
@@ -175,10 +175,14 @@
 	fcm_l3_cache: fcm-l3-cache {
 		compatible = "arm,fcm-l3-cache";
 		portions = <4>;
+		portion-min = <1>;
+		portion-max = <4>;
 		size = <1024>; /* size in KB */
 		line-size = <64>;
+		cache-leakage-per-mb = <10000>; /*uW/MB */
+		dram-energy-per-mb = <130>; /* uJ/MB */
 		polling = <10>; /* miliseconds */
-		connected-cpus = <0 1 3>; /*cpus that are pinned to that L3 cache */
+		resize-regulation-enabled;
 	};
 
 	pmu_a72 {
