config: gem5: enable FCM devfreq, tracing and dynamic debug options
Signed-off-by: Ionela Voinescu <ionela.voinescu@arm.com>

--- a/arch/arm64/configs/gem5_defconfig
+++ b/arch/arm64/configs/gem5_defconfig
@@ -2654,3 +2654,12 @@ CONFIG_FONT_8x8=y
 CONFIG_FONT_8x16=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_ARCH_HAS_SG_CHAIN=y
+CONFIG_ARM64_FCM_DEVFREQ=y
+CONFIG_PM_DEVFREQ=y
+CONFIG_DEVFREQ_GOV_USERSPACE=y
+CONFIG_FTRACE=y
+CONFIG_FUNCTION_TRACER=y
+CONFIG_FUNCTION_GRAPH_TRACER=y
+CONFIG_TRACEPOINTS=y
+CONFIG_DYNAMIC_FTRACE=y
+CONFIG_DYNAMIC_DEBUG=y
