--- a/arch/arm64/boot/dts/hisilicon/hi3660.dtsi
+++ b/arch/arm64/boot/dts/hisilicon/hi3660.dtsi
@@ -68,6 +68,7 @@
 			cooling-max-level = <0>;
 			#cooling-cells = <2>; /* min followed by max */
 			dynamic-power-coefficient = <110>;
+			capacity-dmips-mhz = <593>;
 		};
 
 		cpu1: cpu@1 {
@@ -79,6 +80,7 @@
 			cpu-idle-states = <&CPU_SLEEP &CLUSTER_SLEEP_0>;
 			clocks = <&stub_clock HI3660_CLK_STUB_CLUSTER0>;
 			operating-points-v2 = <&cluster0_opp>;
+			capacity-dmips-mhz = <593>;
 		};
 
 		cpu2: cpu@2 {
@@ -90,6 +92,7 @@
 			cpu-idle-states = <&CPU_SLEEP &CLUSTER_SLEEP_0>;
 			clocks = <&stub_clock HI3660_CLK_STUB_CLUSTER0>;
 			operating-points-v2 = <&cluster0_opp>;
+			capacity-dmips-mhz = <593>;
 		};
 
 		cpu3: cpu@3 {
@@ -101,6 +104,7 @@
 			cpu-idle-states = <&CPU_SLEEP &CLUSTER_SLEEP_0>;
 			clocks = <&stub_clock HI3660_CLK_STUB_CLUSTER0>;
 			operating-points-v2 = <&cluster0_opp>;
+			capacity-dmips-mhz = <593>;
 		};
 
 		cpu4: cpu@100 {
@@ -120,6 +124,7 @@
 			cooling-max-level = <0>;
 			#cooling-cells = <2>; /* min followed by max */
 			dynamic-power-coefficient = <550>;
+			capacity-dmips-mhz = <1024>;
 		};
 
 		cpu5: cpu@101 {
@@ -135,6 +140,7 @@
 			>;
 			clocks = <&stub_clock HI3660_CLK_STUB_CLUSTER1>;
 			operating-points-v2 = <&cluster1_opp>;
+			capacity-dmips-mhz = <1024>;
 		};
 
 		cpu6: cpu@102 {
@@ -150,6 +156,7 @@
 			>;
 			clocks = <&stub_clock HI3660_CLK_STUB_CLUSTER1>;
 			operating-points-v2 = <&cluster1_opp>;
+			capacity-dmips-mhz = <1024>;
 		};
 
 		cpu7: cpu@103 {
@@ -165,6 +172,7 @@
 			>;
 			clocks = <&stub_clock HI3660_CLK_STUB_CLUSTER1>;
 			operating-points-v2 = <&cluster1_opp>;
+			capacity-dmips-mhz = <1024>;
 		};
 
 		idle-states {
@@ -223,30 +231,35 @@
 			opp-hz = /bits/ 64 <533000000>;
 			opp-microvolt = <700000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <182856>;
 		};
 
 		opp01 {
 			opp-hz = /bits/ 64 <999000000>;
 			opp-microvolt = <800000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <345000>;
 		};
 
 		opp02 {
 			opp-hz = /bits/ 64 <1402000000>;
 			opp-microvolt = <900000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <528888>;
 		};
 
 		opp03 {
 			opp-hz = /bits/ 64 <1709000000>;
 			opp-microvolt = <1000000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <724000>;
 		};
 
 		opp04 {
 			opp-hz = /bits/ 64 <1844000000>;
 			opp-microvolt = <1100000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <879996>;
 		};
 	};
 
@@ -258,30 +271,35 @@
 			opp-hz = /bits/ 64 <903000000>;
 			opp-microvolt = <700000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <1091428>;
 		};
 
 		opp11 {
 			opp-hz = /bits/ 64 <1421000000>;
 			opp-microvolt = <800000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <1849996>;
 		};
 
 		opp12 {
 			opp-hz = /bits/ 64 <1805000000>;
 			opp-microvolt = <900000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <2648888>;
 		};
 
 		opp13 {
 			opp-hz = /bits/ 64 <2112000000>;
 			opp-microvolt = <1000000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <3504000>;
 		};
 
 		opp14 {
 			opp-hz = /bits/ 64 <2362000000>;
 			opp-microvolt = <1100000>;
 			clock-latency-ns = <300000>;
+			opp-microamp = <4414544>;
 		};
 	};
 
