x86/kpti: Add fixlets pointed out by reviewers
Need to be folded back into the proper place.

Signed-off-by: Thomas Gleixner <tglx@linutronix.de>

--- a/security/Kconfig
+++ b/security/Kconfig
@@ -56,7 +56,8 @@ config SECURITY_NETWORK
 
 config KERNEL_PAGE_TABLE_ISOLATION
 	bool "Remove the kernel mapping in user mode"
-	depends on X86_64 && JUMP_LABEL
+	depends on X86_64
+	select JUMP_LABEL
 	help
 	  This feature reduces the number of hardware side channels by
 	  ensuring that the majority of kernel addresses are not mapped
