--- a/arch/arm64/configs/hikey960_defconfig
+++ b/arch/arm64/configs/hikey960_defconfig
@@ -15,9 +15,9 @@ CONFIG_LOG_BUF_SHIFT=19
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_DEVICE=y
-CONFIG_CPUSETS=y
+CONFIG_CPUSETS=n
 CONFIG_CGROUP_CPUACCT=y
-CONFIG_CGROUP_SCHEDTUNE=y
+CONFIG_CGROUP_SCHEDTUNE=n
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
@@ -26,7 +26,7 @@ CONFIG_CGROUP_HUGETLB=y
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_SCHED_TUNE=y
+CONFIG_SCHED_TUNE=n
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_KALLSYMS_ALL=y
